Moved character list refresh into context menu

--- a/res/menu/pilots_context.xml
+++ b/res/menu/pilots_context.xml
@@ -3,5 +3,6 @@
 
     <item android:id="@+id/pilots_context_remove"
     	android:title="@string/pilots_context_remove" />
+    <item android:id="@+id/pilots_context_refresh" android:title="@string/pilots_context_refresh"></item>
 
 </menu>
