--- a/res/layout/start.xml
+++ b/res/layout/start.xml
@@ -22,14 +22,15 @@
             android:maxWidth="64dip"
             android:contentDescription="@string/start_character_portrait"
             android:scaleType="centerInside" />
-        <ImageView
+
+        <ImageView
             android:id="@+id/start_character_choose"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignBottom="@id/start_character_image"
             android:layout_alignParentRight="true"
             android:contentDescription="@string/start_character_choose"
-            android:src="@android:drawable/arrow_down_float" />
+            android:src="@drawable/spinner_edge" />
         
         <TextView
             android:id="@+id/start_character_name"
