--- a/res/layout/history_entry.xml
+++ b/res/layout/history_entry.xml
@@ -8,27 +8,31 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true" />
+        android:layout_alignParentTop="true"
+        android:layout_marginLeft="3dip" />
 
     <TextView
         android:id="@+id/history_entry_key_id"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
-        android:layout_alignParentTop="true" />
+        android:layout_alignParentTop="true"
+        android:layout_marginRight="3dip" />
 
     <TextView
         android:id="@+id/history_entry_url"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
-        android:layout_below="@id/history_entry_datetime" />
+        android:layout_below="@+id/history_entry_datetime"
+        android:layout_marginLeft="3dip" />
 
     <TextView
         android:id="@+id/history_entry_result"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
-        android:layout_below="@id/history_entry_url" />
+        android:layout_below="@+id/history_entry_url"
+        android:layout_marginLeft="3dip" />
 
 </RelativeLayout>
