--- a/res/menu/start_options.xml
+++ b/res/menu/start_options.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
+    
     <item android:id="@+id/start_optmenu_history" android:title="@string/start_optmenu_history" android:icon="@android:drawable/ic_menu_recent_history"></item>
+    <item android:id="@+id/start_optmenu_refresh" android:title="@string/start_optmenu_refresh" android:icon="@drawable/ic_menu_refresh"></item>
     <item android:id="@+id/start_optmenu_preferences" android:title="@string/start_optmenu_preferences" android:icon="@android:drawable/ic_menu_preferences"></item>
     
-
 </menu>
