--- a/res/layout/start.xml
+++ b/res/layout/start.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/start_background"
     android:orientation="vertical" >
 
     <RelativeLayout
@@ -67,14 +68,15 @@
                 android:layout_width="wrap_content"
                 android:layout_height="fill_parent"
                 android:layout_weight="0.5" >
-                			    <Button
+
+			    <Button
 			        android:id="@+id/wallet"
 			        android:layout_width="wrap_content"
 			        android:layout_height="wrap_content"
 			        android:layout_gravity="center"
-			        android:background="#80000000"
+			        android:background="#00000000"
 			        android:drawablePadding="10sp"
-			        android:drawableTop="@drawable/ic_launcher"
+			        android:drawableTop="@drawable/ic_start_wallet"
 			        android:text="@string/start_wallet"
 			        android:textAppearance="?android:attr/textAppearanceLarge"
 			        android:textColor="#ffffff" />
@@ -85,14 +87,15 @@
                 android:layout_width="wrap_content"
                 android:layout_height="fill_parent"
                 android:layout_weight="0.5" >
-			    			    <Button
+
+			    <Button
 			        android:id="@+id/pilots"
 			        android:layout_width="wrap_content"
 			        android:layout_height="wrap_content"
 			        android:layout_gravity="center"
-			        android:background="#80000000"
+			        android:background="#00000000"
 			        android:drawablePadding="10sp"
-			        android:drawableTop="@drawable/ic_launcher"
+			        android:drawableTop="@drawable/ic_start_pilots"
 			        android:text="@string/start_pilots"
 			        android:textAppearance="?android:attr/textAppearanceLarge"
 			        android:textColor="#ffffff" />
