--- a/res/layout/start.xml
+++ b/res/layout/start.xml
@@ -74,12 +74,12 @@
 			        android:layout_width="wrap_content"
 			        android:layout_height="wrap_content"
 			        android:layout_gravity="center"
-			        android:background="#00000000"
+			        android:background="@android:color/transparent"
 			        android:drawablePadding="10sp"
 			        android:drawableTop="@drawable/ic_start_wallet"
 			        android:text="@string/start_wallet"
 			        android:textAppearance="?android:attr/textAppearanceLarge"
-			        android:textColor="#ffffff" />
+			        android:textColor="@android:color/white" />
 		
             </FrameLayout>
             
@@ -93,12 +93,12 @@
 			        android:layout_width="wrap_content"
 			        android:layout_height="wrap_content"
 			        android:layout_gravity="center"
-			        android:background="#00000000"
+			        android:background="@android:color/transparent"
 			        android:drawablePadding="10sp"
 			        android:drawableTop="@drawable/ic_start_pilots"
 			        android:text="@string/start_pilots"
 			        android:textAppearance="?android:attr/textAppearanceLarge"
-			        android:textColor="#ffffff" />
+			        android:textColor="@android:color/white" />
                 
             </FrameLayout>
 		
