--- a/res/xml/preferences.xml
+++ b/res/xml/preferences.xml
@@ -3,6 +3,7 @@
     <PreferenceCategory android:title="@string/preferences_cat_updating_data">
         <ListPreference android:title="@string/preferences_update_interval" android:entryValues="@array/update_interval_values" android:entries="@array/update_interval" android:defaultValue="1" android:key="updateInterval"/>
         <CheckBoxPreference android:summary="@string/preferences_honor_gs_summary" android:title="@string/preferences_honor_gs" android:key="honorGlobalSync" android:defaultValue="true"/>
+        <CheckBoxPreference android:summary="@string/preferences_require_wifi_summary" android:title="@string/preferences_require_wifi" android:key="requireWifi" android:defaultValue="false" />
     </PreferenceCategory>
 
 </PreferenceScreen>
