--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
 	<string-array name="update_interval">
 		<item>Hourly</item>
 		<item>Every 2 hours</item>
@@ -9,7 +9,7 @@
 		<item>Daily</item>
 		<item>Manual only</item>
 	</string-array>    
-	<string-array name="update_interval_values">
+	<string-array name="update_interval_values" tools:ignore="MissingTranslation">
 		<item>1</item>
 		<item>2</item>
 		<item>4</item>
@@ -18,7 +18,7 @@
 		<item>24</item>
 		<item>0</item>
 	</string-array>
-	<string-array name="eve_reference_types">
+	<string-array name="eve_reference_types" tools:ignore="MissingTranslation">
 		<item>Undefined</item>
 		<item>Player Trading</item>
 		<item>Market Transaction</item>
