--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -2,5 +2,5 @@
 <resources>
     <color name="wallet_entry_number_positive">#ff00ff00</color>
     <color name="wallet_entry_number_negative">#ffff0000</color>
-    
+    <color name="transparent">#00000000</color>
 </resources>
