--- a/res/layout/wallet_entry_market.xml
+++ b/res/layout/wallet_entry_market.xml
@@ -30,22 +30,40 @@
         android:scrollHorizontally="true"
         android:ellipsize="end" />
 
-    <TextView
-        android:id="@+id/wallet_entry_market_item"
+    <LinearLayout
+        android:id="@+id/wallet_entry_market_item_line" 
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:orientation="horizontal"
         android:layout_alignParentLeft="true"
-        android:layout_below="@+id/wallet_entry_market_station"
-        android:lines="1"
-        android:scrollHorizontally="true"
-        android:ellipsize="end" />
-
+        android:layout_below="@+id/wallet_entry_market_station">
+        
+	    <ImageView
+	        android:id="@+id/wallet_entry_market_item_image"
+	        android:layout_width="48dip"
+	        android:layout_height="48dip"
+	        android:maxHeight="48dip"
+	        android:maxWidth="48dip"
+	        android:scaleType="centerInside"
+	        android:src="@android:color/transparent" />
+	    
+	    <TextView
+	        android:id="@+id/wallet_entry_market_item"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:layout_gravity="center_vertical"
+	        android:lines="1"
+	        android:scrollHorizontally="true"
+	        android:ellipsize="end" />
+	
+    </LinearLayout>
+    
     <TextView
         android:id="@+id/wallet_entry_market_quantity"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
-        android:layout_below="@+id/wallet_entry_market_item" />
+        android:layout_below="@+id/wallet_entry_market_item_line" />
 
     <TextView
         android:id="@+id/wallet_entry_market_static3"
